<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_translate"
        android:text="@string/translate_animation"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_scale"
        android:layout_marginTop="10dp"
        android:text="@string/scale_animation"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_rotate"
        android:layout_marginTop="10dp"
        android:text="@string/rotate_animation"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_alpha"
        android:layout_marginTop="10dp"
        android:text="@string/alpha_animation"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
</LinearLayout>